added function for checking if answer from user is correct

--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,8 @@ body {
 .cardOptions {
   padding: 18px 0px;
 }
+
+.quiz-answer:hover {
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.05);
+}
