--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
 
 .container {
   min-height: 100vh;
+  width: 100%;
   background-color: #007aff !important;
   display: flex;
   justify-content: center;
@@ -29,4 +30,9 @@ body {
 .quiz-answer:hover {
   cursor: pointer;
   background-color: rgba(0, 0, 0, 0.05);
+}
+
+.bg-success,
+.bg-danger {
+  color: white !important;
 }
