--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@ body {
   background-color: #007aff !important;
 }
 
+.d_none {
+  display: none;
+}
+
 .container {
   min-height: 100vh;
   width: 100%;
